Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.3.x
DATE 0x/xx/2008
13th Alpha Release

NEWS:


NEW: [features/improvements]
+Multi-line comments are foldable in C/CPP/D
+New version of FileBrowser
+Interface font is configurable
+Add Norwegian Nynorsk Translation (contributed by JoNNeMaNN)
+Add French Translation
+New bundled style sheet 'Mocha'
+Improved context menu behavior
+Can toggle status bar visibility

BUG FIXES:
+Add missing keywords for DOS Batch scripts
+Ensure text that is folded becomes visible when searching for it
+Save All action now properly updates tab status
+Replace All failing when begining of buffer matches search pattern.
+Replace All with Up flag set causing error to be raised
+Unable to load style sheets with mixed case lettering on gtk

#-----------------------------------------------------------------------------#

VERSION 0.3.0
DATE 04/25/2008
12th Alpha Release

NEWS:
  This release adds support for customizable keybindings and a keybinding
editor to the preferences dialog. The keybindings can be saved in multiple key
profiles to allow for switching keybindings on the fly.

  The bundled CodeBrowser plugin has received an update to include a number of
new languages and improvements to the previously existing ones. The Projects
plugin has also been updated to fix a number of bugs that were mostly visible
on the Windows platform.

NEW: [features/improvements]
+Configurable Keybindings and Keybinding editor
+New version of CodeBrowser with added support for
 (Ferite, haXe, Matlab, Octave, Scheme, System Verilog, Verilog)
+Add highlighting support for System Verilog (w/ help from Tim Corcoran)
+Add support for (C#, Vala, Squirrel)
+Improved support for (Caml, Objective C)
+Improved heuristics for guessing file encoding when regular detection fails