@@ -17,10 +17,13 @@ NEWS:
 
 NEW: [features/improvements]
 +Multi-line comments are foldable in C/CPP/D
++New version of CodeBrowser
 +New version of FileBrowser
++New version of Launch
 +Interface font is configurable
 +Add Norwegian Nynorsk Translation (contributed by JoNNeMaNN)
 +Add French Translation
++Add Brazilian Portuguese Translation (contributed by Ricardo Crudo)
 +New bundled style sheet 'Mocha'
 +Improved context menu behavior
 +Can toggle status bar visibility
@@ -32,6 +35,7 @@ BUG FIXES:
 +Replace All failing when begining of buffer matches search pattern.
 +Replace All with Up flag set causing error to be raised
 +Unable to load style sheets with mixed case lettering on gtk
++Don't try to provide autocomp/calltips when in a comment or string
 
 #-----------------------------------------------------------------------------#
 
